* fixed bug where when times chosen for multiple selections weren't displayed. * corrected accidental text overflow on time text in date div. * remove console.logs * values are deleted from div on deselect * allow different times for different selections * added ability to add ranges of length 1

--- a/scss/calendarApp.scss
+++ b/scss/calendarApp.scss
@@ -77,6 +77,7 @@
       color: black;
       text-align: center;
       margin: 0px;
+      font-size: 0.8em;
     }  
   }
 
